# Project1_Backend

./: .gitignore  README.md  cli.py  main.py  pyproject.toml  requirements.txt
Project1.egg-info/: SOURCES.txt  entry_points.txt
src/: config.py
src/Project1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/filesystem/: cli_analize_files.py  cli_cnt_files.py  cli_copy_files.py  cli_delete_files.py  cli_find_file.py  cli_modif_files.py  cli_star_ficha.py
tests/: f_test_calculator.py  test_analize_files.py  test_cli_cnt_files.py  test_cli_copy_files.py  test_cli_delete_files.py  test_cli_find_file.py  test_cli_modif_files.py  test_integration_cli.py
